gke/multi-tenancy/Tenant-Access/1-test-deploy/tenant-c/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first
  namespace: team-c
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-first
